Drop comments from code

--- a/dart-patterns-and-records/codelab_rebuild.yaml
+++ b/dart-patterns-and-records/codelab_rebuild.yaml
@@ -534,10 +534,10 @@ steps:
           +    Duration(inDays: 1) => 'tomorrow',
           +    Duration(inDays: -1) => 'yesterday',
           +    Duration(inDays: var days) when days > 7 =>
-          +      '${days ~/ 7} weeks from now', // New
+          +      '${days ~/ 7} weeks from now',
           +    Duration(inDays: var days)
           +        when days < -7 =>
-          +      '${days.abs() ~/ 7} weeks ago', // New
+          +      '${days.abs() ~/ 7} weeks ago',
           +    Duration(inDays: var days, isNegative: true) => '${days.abs()} days ago',
           +    Duration(inDays: var days) => '$days days from now',
           +  };
@@ -550,7 +550,7 @@ steps:
              @override
              Widget build(BuildContext context) {
                var (title, :modified) = document.metadata;
-          +    var formattedModifiedDate = formatDate(modified); // New
+          +    var formattedModifiedDate = formatDate(modified);
                var blocks = document.getBlocks();
            
                return Scaffold(
@@ -559,7 +559,7 @@ steps:
                  body: Column(
                    children: [
           -          Text('Last modified: $modified'),
-          +          Text('Last modified: $formattedModifiedDate'), // New
+          +          Text('Last modified: $formattedModifiedDate'),
                      Expanded(
                        child: ListView.builder(
                          itemCount: blocks.length,
