--- a/dart-patterns-and-records/codelab_rebuild.yaml
+++ b/dart-patterns-and-records/codelab_rebuild.yaml
@@ -13,8 +13,10 @@ steps:
         path: patterns_codelab/analysis_options.yaml
         replace-contents: |
           include: ../../analysis_options.yaml
-
+          
           analyzer:
+            errors:
+              unused_field: ignore
             language:
               strict-casts: false
               strict-inference: false
@@ -79,7 +81,6 @@ steps:
           import 'dart:convert';
 
           class Document {
-            //ignore: unused_field
             final Map<String, Object?> _json;
             Document() : _json = jsonDecode(documentJson);
           }
@@ -179,8 +180,8 @@ steps:
         patch-u: |
           --- b/dart-patterns-and-records/step_05/lib/data.dart
           +++ a/dart-patterns-and-records/step_05/lib/data.dart
-          @@ -8,6 +8,13 @@ class Document {
-             //ignore: unused_field
+          @@ -7,6 +7,13 @@ import 'dart:convert';
+           class Document {
              final Map<String, Object?> _json;
              Document() : _json = jsonDecode(documentJson);
           +
@@ -307,12 +308,7 @@ steps:
         patch-u: |
           --- b/dart-patterns-and-records/step_07/lib/data.dart
           +++ a/dart-patterns-and-records/step_07/lib/data.dart
-          @@ -5,15 +5,21 @@
-           import 'dart:convert';
-           
-           class Document {
-          -  //ignore: unused_field
-             final Map<String, Object?> _json;
+          @@ -9,10 +9,17 @@ class Document {
              Document() : _json = jsonDecode(documentJson);
            
              (String, {DateTime modified}) get metadata {
