--- a/dart-patterns-and-records/step_06_b/analysis_options.yaml
+++ b/dart-patterns-and-records/step_06_b/analysis_options.yaml
@@ -1,6 +1,8 @@
 include: ../../analysis_options.yaml
 
 analyzer:
+  errors:
+    unused_field: ignore
   language:
     strict-casts: false
     strict-inference: false
