--- a/dart3/step_05/pubspec.yaml
+++ b/dart3/step_05/pubspec.yaml
@@ -1,19 +1,16 @@
 name: patterns_codelab
 description: A new Flutter project.
 publish_to: 'none'
-version: 0.1.0
-
+version: 1.0.0
 environment:
-  sdk: '>=3.0.0-417.2.beta <4.0.0'
-
+  sdk: '>=3.0.0-0 <4.0.0'
 dependencies:
   flutter:
     sdk: flutter
-
+  cupertino_icons: ^1.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-
 flutter:
   uses-material-design: true
