--- a/adaptive_app/codelab_rebuild.yaml
+++ b/adaptive_app/codelab_rebuild.yaml
@@ -292,8 +292,8 @@ steps:
                   GoRoute(
                     path: 'playlist/:id',
                     builder: (context, state) {
-                      final title = state.queryParams['title']!;
-                      final id = state.params['id']!;
+                      final title = state.queryParameters['title']!;
+                      final id = state.pathParameters['id']!;
                       return PlaylistDetails(
                         playlistId: id,
                         playlistName: title,
@@ -764,8 +764,8 @@ steps:
                    GoRoute(
           @@ -32,9 +32,12 @@ final _router = GoRouter(
                      builder: (context, state) {
-                       final title = state.queryParams['title']!;
-                       final id = state.params['id']!;
+                       final title = state.queryParameters['title']!;
+                       final id = state.pathParameters['id']!;
           -            return PlaylistDetails(
           -              playlistId: id,
           -              playlistName: title,
