--- a/dart-patterns-and-records/codelab_rebuild.yaml
+++ b/dart-patterns-and-records/codelab_rebuild.yaml
@@ -20,6 +20,12 @@ steps:
             language:
               strict-casts: false
               strict-inference: false
+          
+          linter:
+            rules:
+              prefer_final_in_for_each
+              prefer_final_locals
+              prefer_final_parameters
       - name: Remove README
         rm: patterns_codelab/README.md
       - name: Patch lib/main.dart
@@ -308,7 +314,7 @@ steps:
         patch-u: |
           --- b/dart-patterns-and-records/step_07_a/lib/data.dart
           +++ a/dart-patterns-and-records/step_07_a/lib/data.dart
-          @@ -9,10 +9,15 @@ class Document {
+          @@ -9,10 +9,16 @@ class Document {
              Document() : _json = jsonDecode(documentJson);
            
              (String, {DateTime modified}) get metadata {
@@ -320,7 +326,8 @@ steps:
           +      final metadataJson = _json['metadata'];
           +      if (metadataJson is Map) {
           +        final title = metadataJson['title'] as String;
-          +        final localModified = DateTime.parse(metadataJson['modified'] as String);
+          +        final localModified =
+          +            DateTime.parse(metadataJson['modified'] as String);
           +        return (title, modified: localModified);
           +      }
           +    }
@@ -346,7 +353,7 @@ steps:
         patch-u: |
           --- b/dart-patterns-and-records/step_07_b/lib/data.dart
           +++ a/dart-patterns-and-records/step_07_b/lib/data.dart
-          @@ -9,15 +9,17 @@ class Document {
+          @@ -9,16 +9,17 @@ class Document {
              Document() : _json = jsonDecode(documentJson);
            
              (String, {DateTime modified}) get metadata {
@@ -354,7 +361,8 @@ steps:
           -      final metadataJson = _json['metadata'];
           -      if (metadataJson is Map) {
           -        final title = metadataJson['title'] as String;
-          -        final localModified = DateTime.parse(metadataJson['modified'] as String);
+          -        final localModified =
+          -            DateTime.parse(metadataJson['modified'] as String);
           -        return (title, modified: localModified);
           -      }
           +    if (_json
@@ -597,16 +605,17 @@ steps:
         patch-u: |
           --- b/dart-patterns-and-records/step_11_b/lib/main.dart
           +++ a/dart-patterns-and-records/step_11_b/lib/main.dart
-          @@ -18,6 +18,8 @@ String formatDate(DateTime dateTime) {
+          @@ -18,6 +18,9 @@ String formatDate(DateTime dateTime) {
                Duration(inDays: 0) => 'today',
                Duration(inDays: 1) => 'tomorrow',
                Duration(inDays: -1) => 'yesterday',
           +    Duration(inDays: final days) when days > 7 => '${days ~/ 7} weeks from now',
-          +    Duration(inDays: final days) when days < -7 => '${days.abs() ~/ 7} weeks ago',
+          +    Duration(inDays: final days) when days < -7 =>
+          +      '${days.abs() ~/ 7} weeks ago',
                Duration(inDays: final days, isNegative: true) => '${days.abs()} days ago',
                Duration(inDays: final days) => '$days days from now',
              };
-          @@ -48,6 +50,7 @@ class DocumentScreen extends StatelessWidget {
+          @@ -48,6 +51,7 @@ class DocumentScreen extends StatelessWidget {
              @override
              Widget build(BuildContext context) {
                final (title, :modified) = document.metadata;
@@ -614,7 +623,7 @@ steps:
                final blocks = document.getBlocks();
            
                return Scaffold(
-          @@ -56,7 +59,7 @@ class DocumentScreen extends StatelessWidget {
+          @@ -56,7 +60,7 @@ class DocumentScreen extends StatelessWidget {
                  ),
                  body: Column(
                    children: [
@@ -690,7 +699,7 @@ steps:
         patch-u: |
           --- b/dart-patterns-and-records/step_12/lib/main.dart
           +++ a/dart-patterns-and-records/step_12/lib/main.dart
-          @@ -84,19 +84,21 @@ class BlockWidget extends StatelessWidget {
+          @@ -85,19 +85,21 @@ class BlockWidget extends StatelessWidget {
            
              @override
              Widget build(BuildContext context) {
