--- a/dart-patterns-and-records/step_11_b/analysis_options.yaml
+++ b/dart-patterns-and-records/step_11_b/analysis_options.yaml
@@ -6,3 +6,9 @@ analyzer:
   language:
     strict-casts: false
     strict-inference: false
+
+linter:
+  rules:
+    prefer_final_in_for_each
+    prefer_final_locals
+    prefer_final_parameters
