--- a/dart-patterns-and-records/step_07_a/analysis_options.yaml
+++ b/dart-patterns-and-records/step_07_a/analysis_options.yaml
@@ -9,6 +9,4 @@ analyzer:
 
 linter:
   rules:
-    prefer_final_in_for_each
-    prefer_final_locals
-    prefer_final_parameters
+    - prefer_final_in_for_each
