--- a/dart-patterns-and-records/codelab_rebuild.yaml
+++ b/dart-patterns-and-records/codelab_rebuild.yaml
@@ -23,9 +23,7 @@ steps:
           
           linter:
             rules:
-              prefer_final_in_for_each
-              prefer_final_locals
-              prefer_final_parameters
+              - prefer_final_in_for_each
       - name: Remove README
         rm: patterns_codelab/README.md
       - name: Patch lib/main.dart
