Update codelab rebuild script

--- a/flame-building-doodle-dash/codelab_rebuild.yaml
+++ b/flame-building-doodle-dash/codelab_rebuild.yaml
@@ -2058,7 +2058,7 @@ steps:
            
                position += _velocity * dt;
            
-          @@ -122,9 +122,31 @@ class Player extends SpriteGroupComponent<PlayerState>
+          @@ -122,9 +122,32 @@ class Player extends SpriteGroupComponent<PlayerState>
            
              // Powerups: Add isWearingHat getter
            
@@ -2073,9 +2073,10 @@ steps:
           +
           +    if (isMovingDown && isCollidingVertically) {
           +      current = PlayerState.center;
-          +      if (other is NormalPlatform) {
-          +        jump();
-          +        return;
+          +      switch (other) {
+          +        case NormalPlatform():
+          +          jump();
+          +          return;
           +      }
           +      // More on platforms: Check SpringBoard platform
           +      // More on platforms: Check BrokenPlatform
@@ -2269,18 +2270,17 @@ steps:
         patch-u: |
           --- b/flame-building-doodle-dash/step_06/lib/game/sprites/player.dart
           +++ a/flame-building-doodle-dash/step_06/lib/game/sprites/player.dart
-          @@ -135,9 +135,15 @@ class Player extends SpriteGroupComponent<PlayerState>
-                 if (other is NormalPlatform) {
-                   jump();
-                   return;
-          +      } else if (other is SpringBoard) {
-          +        jump(specialJumpSpeed: jumpSpeed * 2);
-          +        return;
-          +      } else if (other is BrokenPlatform &&
-          +          other.current == BrokenPlatformState.cracked) {
-          +        jump();
-          +        other.breakPlatform();
-          +        return;
+          @@ -136,9 +136,14 @@ class Player extends SpriteGroupComponent<PlayerState>
+                   case NormalPlatform():
+                     jump();
+                     return;
+          +        case SpringBoard():
+          +          jump(specialJumpSpeed: jumpSpeed * 2);
+          +          return;
+          +        case BrokenPlatform() when other.current == BrokenPlatformState.cracked:
+          +          jump();
+          +          other.breakPlatform();
+          +          return;
                  }
           -      // More on platforms: Check SpringBoard platform
           -      // More on platforms: Check BrokenPlatform
@@ -2593,25 +2593,31 @@ steps:
                  gameRef.onLose();
                  return;
                }
-          @@ -150,8 +161,20 @@ class Player extends SpriteGroupComponent<PlayerState>
+          @@ -150,8 +161,26 @@ class Player extends SpriteGroupComponent<PlayerState>
                  }
                }
            
           -    // Powerups: Collision logic for Rocket
           -    // Powerups: Collision logic for NooglerHat
-          +    if (!hasPowerup && other is Rocket) {
-          +      current = PlayerState.rocket;
-          +      other.removeFromParent();
-          +      jump(specialJumpSpeed: jumpSpeed * other.jumpSpeedMultiplier);
-          +      return;
-          +    } else if (!hasPowerup && other is NooglerHat) {
-          +      if (current == PlayerState.center) current = PlayerState.nooglerCenter;
-          +      if (current == PlayerState.left) current = PlayerState.nooglerLeft;
-          +      if (current == PlayerState.right) current = PlayerState.nooglerRight;
-          +      other.removeFromParent();
-          +      _removePowerupAfterTime(other.activeLengthInMS);
-          +      jump(specialJumpSpeed: jumpSpeed * other.jumpSpeedMultiplier);
-          +      return;
+          +    if (!hasPowerup) {
+          +      switch (other) {
+          +        case Rocket():
+          +          current = PlayerState.rocket;
+          +          other.removeFromParent();
+          +          jump(specialJumpSpeed: jumpSpeed * other.jumpSpeedMultiplier);
+          +          return;
+          +        case NooglerHat():
+          +          current = switch (current) {
+          +            PlayerState.center => PlayerState.nooglerCenter,
+          +            PlayerState.left => PlayerState.nooglerLeft,
+          +            PlayerState.right => PlayerState.nooglerRight,
+          +            _ => current,
+          +          };
+          +          other.removeFromParent();
+          +          _removePowerupAfterTime(other.activeLengthInMS);
+          +          jump(specialJumpSpeed: jumpSpeed * other.jumpSpeedMultiplier);
+          +          return;
+          +      }
           +    }
              }
            
