--- a/adaptive_app/step_07/yt_cors_proxy/pubspec.yaml
+++ b/adaptive_app/step_07/yt_cors_proxy/pubspec.yaml
@@ -3,10 +3,10 @@ description: A YouTube CORS Proxy Server.
 version: 1.0.0
 
 environment:
-  sdk: ^3.0.0
+  sdk: ^3.0.2
 
 dependencies:
-  http: ">=0.13.6 <2.0.0"
+  http: ^1.0.0
   shelf: ^1.4.0
   shelf_cors_headers: ^0.1.5
 
