reset android app in step 00

--- a/homescreen_codelab/step_00/android/app/build.gradle
+++ b/homescreen_codelab/step_00/android/app/build.gradle
@@ -26,6 +26,7 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
+    namespace "com.leighajarett.step_00"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
@@ -44,9 +45,9 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.leighajarett.homescreen_widgets"
+        applicationId "com.leighajarett.step_00"
         // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
+        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
@@ -60,10 +61,6 @@ android {
             signingConfig signingConfigs.debug
         }
     }
-    buildFeatures {
-        viewBinding true
-    }
-    namespace 'com.leighajarett.homescreen_widgets'
 }
 
 flutter {
