--- a/firebase-get-to-know-flutter/step_06/pubspec.yaml
+++ b/firebase-get-to-know-flutter/step_06/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.3 <4.0.0'
+  sdk: '>=3.1.0-262.2.beta <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -38,11 +38,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ">=4.0.0 <6.0.0"
   go_router: ^10.0.0
-  cloud_firestore: ^4.8.1
-  firebase_auth: ^4.6.3
-  firebase_core: ^2.14.0
+  cloud_firestore: ^4.8.4
+  firebase_auth: ^4.7.2
+  firebase_core: ^2.15.0
   provider: ^6.0.5
-  firebase_ui_auth: ^1.4.3
+  firebase_ui_auth: ^1.6.2
 
 dev_dependencies:
   flutter_test:
