--- a/google-maps-in-flutter/codelab_rebuild.yaml
+++ b/google-maps-in-flutter/codelab_rebuild.yaml
@@ -20,10 +20,10 @@ steps:
       - name: dart fix
         dart: fix --apply
         path: google_maps_in_flutter
-      - name: Add google_maps_flutter google_maps_flutter_web
+      - name: Add google_maps_flutter
         path: google_maps_in_flutter
-        flutter: pub add google_maps_flutter google_maps_flutter_web
-      - name: Remove the README.md.
+        flutter: pub add google_maps_flutter
+      - name: Remove the README.md
         rm: google_maps_in_flutter/README.md
       - name: VSCode config
         path: google_maps_in_flutter
@@ -49,7 +49,7 @@ steps:
         patch-u: |
           --- b/google-maps-in-flutter/step_3/android/app/build.gradle
           +++ a/google-maps-in-flutter/step_3/android/app/build.gradle
-          @@ -46,9 +46,7 @@ android {
+          @@ -43,9 +43,7 @@ android {
                defaultConfig {
                    // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
                    applicationId "com.example.google_maps_in_flutter"
@@ -1414,7 +1414,7 @@ steps:
         patch-u: |
           --- b/google-maps-in-flutter/step_5/pubspec.yaml
           +++ a/google-maps-in-flutter/step_5/pubspec.yaml
-          @@ -94,3 +94,5 @@ flutter:
+          @@ -93,3 +93,5 @@ flutter:
              #
              # For details regarding fonts from package dependencies,
              # see https://flutter.dev/custom-fonts/#from-packages
