--- a/webview_flutter/step_12/pubspec.yaml
+++ b/webview_flutter/step_12/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0-262.2.beta <4.0.0'
+  sdk: '>=3.1.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,8 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  webview_flutter: ^4.2.2
-  path_provider: ^2.0.15
+  webview_flutter: ^4.2.3
+  path_provider: ^2.1.0
 
 dev_dependencies:
   flutter_test:
